@@ -5,6 +5,7 @@ http://tango.freedesktop.org/Tango_Icon_Library (public domain)
   * process-stop.png
   * address-book-new.png
   * edit-find.png
+  * edit-clear.png
   * document-save.png
   * document-open.png
   * preferences-desktop.png
