@@ -7,6 +7,7 @@
     <file>list-remove.png</file>
     <file>edit-paste.png</file>
     <file>edit-find.png</file>
+    <file>edit-clear.png</file>
     <file>document-save.png</file>
     <file>document-open.png</file>
     <file>address-book-new.png</file>
