@@ -2,6 +2,7 @@ Version 0.3.1
 
   User-visible changes:
    * Add: Edit / Add / Paste (+key shortcut)
+   * Add: Clear list (button +menu item)
    * Change: use 16x16 for all icons
    * Change: misc. tooltip messages
 
